PP-6-Fixing spacing

--- a/src/components/HeaderComponent.scss
+++ b/src/components/HeaderComponent.scss
@@ -1,4 +1,50 @@
-@import "../variables"; 
+@import "../variables";
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, font, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-weight: inherit;
+	font-style: inherit;
+	// font-size: 100%;
+	font-family: inherit;
+	vertical-align: baseline;
+}
+/* remember to define focus styles! */
+:focus {
+	outline: 0;
+}
+body {
+	line-height: 1;
+	color: black;
+	background: white;
+}
+ol, ul {
+	list-style: none;
+}
+/* tables still need 'cellspacing="0"' in the markup */
+table {
+	border-collapse: separate;
+	border-spacing: 0;
+}
+caption, th, td {
+	text-align: left;
+	font-weight: normal;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: "";
+}
+blockquote, q {
+	quotes: "" "";
+}
 .header__container {
     display: flex; 
     flex-flow: column nowrap;
@@ -7,7 +53,7 @@
 .greeting { 
     // display: flex; 
     // flex-flow: column nowrap;
-    padding-bottom: 1rem; 
+    // padding-bottom: 1rem; 
     // margin: px;
 }
 
@@ -16,10 +62,10 @@
     font-style: normal;
     font-weight: bold;
     font-size: $font-size-l;
-    line-height: 36px;
+    // line-height: 36px;
     color: #F8F9FA;
     padding-left: $spacing-s;   
-    padding-bottom: 0.01rem;
+    margin-bottom: $spacing-xxs;
 }
 
 .greeting.b {
@@ -28,9 +74,10 @@
     font-style: normal;
     font-weight: normal;
     font-size: $font-size-m;
-    line-height: 29px;
+    // line-height: 29px;
     padding-left: $spacing-s;
     color: #F8F9FA; 
+    margin-bottom: $spacing-l;
 
 }
 
